# Cool-Chic

./: .gitignore  CONTRIBUTORS.md  LICENSE.txt  LICENSE_CABAC.txt  README.md  _generate_possible_mu_scale.py  _getcodingstruct.py  cartouche.txt  cc_decode.py  cc_encode.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: sanity-check.yml  static-pages.yml
cfg/dec/: hop.cfg  lop.cfg  mop.cfg  vlop.cfg
cfg/enc/: c3x_100k_5loops.cfg  c3x_10k_5loops.cfg  debug.cfg  fast_10k.cfg  measure_enc_speed.cfg  medium.cfg  medium_30k.cfg  slow.cfg  slow_100k.cfg
coolchic/: decode.py  encode.py  getcodingstruct.py
coolchic/bitstream/: decode.py  encode.py
coolchic/component/: frame.py  video.py
coolchic/cpp/: BitStream.cpp  BitStream.h  CMakeLists.txt  CommonDef.h  Contexts.cpp  Contexts.h  TDecBinCoder.h  TDecBinCoderCABAC.cpp  TDecBinCoderCABAC.h  TEncBinCoder.h  TEncBinCoderCABAC.cpp  TEncBinCoderCABAC.h  TypeDef.h  arm_avx2.cpp  arm_avx2.h  arm_avx2.hpp  arm_cpu.cpp  arm_cpu.h  cc-bac.h  cc-bitstream.cpp  cc-bitstream.h  cc-contexts.cpp  cc-contexts.h  cc-frame-decoder.cpp  cc-frame-decoder.h  ccdecapi.cpp  ccdecapi.hpp  ccdecapi_avx2.cpp  ccdecapi_cpu.cpp  ccencapi.cpp  common.h  common_avx2.h  common_randomness.cpp  common_randomness.h  frame-memory.cpp  frame-memory.h  rest_avx2.cpp  rest_avx2.h  syn_avx2.cpp  syn_avx2.h  (+27 more)
coolchic/dec/: nn.py
coolchic/io/: framedata.py  io.py  types.py
coolchic/nnquant/: expgolomb.py  quantizemodel.py  quantstep.py  rdoq.py
coolchic/training/: loss.py  presets.py  soap.py  test.py  train.py  warmup.py
coolchic/utils/: codingstructure.py  parsecli.py  termprint.py
docs/source/: conf.py  index.rst
results/: biville.tsv  decode_one_dataset.py
results/biville/: raw_results.tsv
results/clic20-pro-valid/: results.tsv
results/clic22-test/: results.tsv
results/kodak/: average_results.tsv  raw_results.tsv  results.tsv
results/v2.0/: image-clic20-pro-valid.tsv  image-jvet.tsv  image-kodak.tsv
results/v3.0/: image-jvet.tsv  image-kodak.tsv
results/v3.1/: image-clic20-pro-valid.tsv  image-jvet.tsv
results/v3.2/: image-clic20-pro-valid.tsv  image-kodak.tsv
results/v3.3/: image-clic20-pro-valid.tsv  image-kodak.tsv
results/v3.4/: image-clic20-pro-valid.tsv  image-jvet.tsv  image-kodak.tsv
results/v4.0/: video-ra-jvet-c.tsv
samples/: biville_1152x768_1p_yuv420_10b.yuv  biville_1152x768_1p_yuv420_8b.yuv  code_image_cpu.sh  code_image_gpu.sh  decode_image.sh  encode.py  encode_image.sh
src/: decode.py  encode.py
src/models/: arm.py  (+10 more)
test/: sanity_check.py
(+872 files in other folders)
